--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>close to me</title>
+    <title>ALICE IN WONDERLAND</title>
     <style>
       
     </style>
-    <script type="module" crossorigin src="/assets/index.2d143d5d.js"></script>
-    <link rel="stylesheet" href="/assets/index.99b583aa.css">
+    <script type="module" crossorigin src="/assets/index.6aec093c.js"></script>
+    <link rel="stylesheet" href="/assets/index.064e33d6.css">
   </head>
   <body class="loaded">
     <div id="app"></div>
