--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ALICE IN WONDERLAND</title>
+    <title>ALICE</title>
     <style>
       
     </style>
-    <script type="module" crossorigin src="/assets/index.6aec093c.js"></script>
-    <link rel="stylesheet" href="/assets/index.064e33d6.css">
+    <script type="module" crossorigin src="/assets/index.db4d877c.js"></script>
+    <link rel="stylesheet" href="/assets/index.e9b91baf.css">
   </head>
   <body class="loaded">
     <div id="app"></div>
